# django-locallibrary-tutorial

./: pyproject.toml  ruff.toml
locallibrary/: settings.py  urls.py
sendemail/: urls.py  views.py
sendemail/templates/: sendmail.html
