[tool.poetry]
name = "django-locallibrary-tutorial"
version = "0.1.0"
description = ""
authors = ["korruz <korruz@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
dj-database-url = "2.1.0"
gunicorn = "22.0.0"
psycopg2-binary = "2.9.9"
wheel = "0.38.1"
whitenoise = "6.6.0"
python-dotenv = "1.0.1"
aiosmtpd = "^1.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
